--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,26 @@
   'GRAD' 100,
   'opsz' 48
 }
+
+html {
+  --primary: rgba(29 78 216);
+  --secondary: rgb(169, 55, 122);
+  --on-secondary: rgb(255, 255, 255);
+  --background: rgb(238, 238, 238);
+  --surface: rgb(255, 255, 255);
+  --on-surface: rgb(0, 0, 0);
+  --form-field-fill: rgb(243, 244, 246);
+  --surface-border: rgb(204, 204, 204); 
+}
+
+.hover-highlight:hover {
+  background: rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1)!important;
+  backdrop-filter: blur(19.2px) !important;
+}
+
+.highlighted {
+  background: rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1)!important;
+  backdrop-filter: blur(19.2px) !important;
+}
