--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,7 @@
 @tailwind utilities;
 
 .material-symbols-rounded {
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 100,
-  'opsz' 48
+  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 100, 'opsz' 48;
 }
 
 html {
@@ -18,17 +14,17 @@ html {
   --surface: rgb(255, 255, 255);
   --on-surface: rgb(0, 0, 0);
   --form-field-fill: rgb(243, 244, 246);
-  --surface-border: rgb(204, 204, 204); 
+  --surface-border: rgb(204, 204, 204);
 }
 
 .hover-highlight:hover {
   background: rgba(0, 0, 0, 0.1) !important;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1)!important;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
   backdrop-filter: blur(19.2px) !important;
 }
 
 .highlighted {
   background: rgba(0, 0, 0, 0.1) !important;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1)!important;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
   backdrop-filter: blur(19.2px) !important;
 }
