--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,22 @@
 
 .material-symbols-rounded {
   font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 100, 'opsz' 48;
+  font-family: 'Material Symbols Rounded';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
 }
 
 html {
   --primary: rgba(29 78 216);
+  --on-primary: rgb(255, 255, 255);
   --secondary: rgb(169, 55, 122);
   --on-secondary: rgb(255, 255, 255);
   --background: rgb(238, 238, 238);
@@ -27,4 +39,11 @@ html {
   background: rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
   backdrop-filter: blur(19.2px) !important;
+}
+
+@font-face {
+  font-family: 'Material Symbols Rounded';
+  font-style: normal;
+  font-weight: 100 700;
+  src: url(https://fonts.gstatic.com/s/materialsymbolsrounded/v34/sykg-zNym6YjUruM-QrEh7-nyTnjDwKNJ_190Fjzag.woff2) format('woff2');
 }
