--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -3,5 +3,5 @@
     font-family: 'Material Symbols Rounded';
     font-style: normal;
     font-weight: 100 700;
-    src: url(.src/assets/MaterialSymbolsRounded.woff2) format('woff2');
+    src: url(src/assets/MaterialSymbolsRounded.woff2) format('woff2');
   }
